@@ -1,28 +1,28 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST winetricks-20141130.tar.gz 164917 SHA256 6088f45cac80e0a05a52b0a8885739f98b2c5ae07062bfa2aee1265d63891b56 SHA512 b7fbbcbef1a197b65c0def1cffb238d2ac58862e60aa76503171098ff35cf190a072ae7cddf865f5b03a8269702a804c7ad8ada498b922814f0aad8b2970cee1 WHIRLPOOL 16347e85d161cbf78df9d46b1b49292fe0618e6bfc32d0115e104d0bba1e5cbd6f974e6872ddb7ac8679c8dcf9eccbe0b26841ce02723d1456e0a3c3645d53ed
+DIST winetricks-20150416.tar.gz 171166 SHA256 6b1bda0d9ec34c7a8596d59a49fa29fbe00848d9f0fecbf9dff8b314d51a1945 SHA512 75997e0645eb0e984117c6998eeb5c10318ac0be9307e6d60485aae0894d4f631c0486c54f04e7622b2827cafef717e778bfbb4f33a5fc5cb2b8a37430a937b9 WHIRLPOOL 5dc99c1152f5c7d0c8f08dea75cbdb758de64ad6362b078675d90124d9722f73249dda811b19b6be60dc40a4e182ba9f76de577ae3200328acbbc9b570a167db
 DIST winetricks-gentoo-2012.11.24.tar.bz2 6398 SHA256 dded8c294cc5c2e71e4a5d1531ab165178cf3d2d1d890d0656368c2e499bfeb9 SHA512 59c93b73f3a7b2d11aefcde2ff66659ff1de21ad4b5f232f4b60572f3a48b15a6c49f369b1696862bf1b33fde190bf5598945e9536fb41ddec42d8def4d2be2a WHIRLPOOL 268da9e06712a678fbbcfff8eac1fca364b5e46f0a9c48a591eb88f03260b1a55f203eb2908bfe1f0a534b77c866127ff6f7049b0e43fe8abeaaa26fe55de75b
-EBUILD winetricks-20141130.ebuild 1972 SHA256 1f353115c34eb8d616fde71f715c342e61c553d39cbf5f0c6b0f90d2641003b0 SHA512 5924cc9de79023297b64150713d9458fb6f7411f6fa3c1961ed7ec7f5b35550652f412981e3a76c02a810684052fc8ed9d28fa7bcfab2095fa6beeb4c8c195fd WHIRLPOOL 0a1211cf12ca8d79efee188129107d626f5d35c247358f4551c1aa2f6c66b0843d56492781142510067ea337f39984d25728e0f6375eb9ab26634cfff68eaffa
-EBUILD winetricks-99999999.ebuild 1973 SHA256 cfbcce7a32a24d1e1c9f7ac3fcdcf5d422778a856767400d7adecad387b150ad SHA512 071ef7542e94ab69456d3feb3407e77aae9582b474421335e3e943240cb0ab72287c6b54da7daba202d17569eb81f8085ac104966c43569138368cb12de366b4 WHIRLPOOL 36d7ddece9b2ee23aadae11b2e8efad4ceb49ba992e64009d453e548428aa45344cf5b9df7ebca36f36e2c9265b29e5c61d6655ae9a419839843c7a27c4fb187
-MISC ChangeLog 6731 SHA256 a79585403bfc18be4b006f954ee014ed6e6a5b58a73434dd9dc7989f42a51fc5 SHA512 41ca27db775b905cdef186b839f4d27bdf0cdd99c74c6fc0bb224e5b70d6ad13f5288d5ded29e687a54092ce79beee872779f43a2009c424f9738402028f1529 WHIRLPOOL da33c95be602a0bca3765c91d5727529cb0f6b3086b6fed5fd02f2dfeda4d6a1b2782c5b1d59d4f70337c40d527f515765709024979872d813bf772e2797a03a
+EBUILD winetricks-20150416.ebuild 1951 SHA256 8d7831fcd92917166aef6ea0f9d046fc43ddf87c83ce08a9658881577e33decb SHA512 2e6c7bc657954f572444f8293ed3f921f192997aeb3ad901bd512f934a702372e03c867c59ecd8236cfb407c6bef19a9b0e72aa895089b961b4864fea61e2993 WHIRLPOOL 864fdd1de0a5386478e1c3be593acc0609e380f849b3275afab7a29f5abbc95a166530b0654683efe6205c4aa9e25e2cd373f97e3a9fb8d79cb39ff2bb23ce3b
+EBUILD winetricks-99999999.ebuild 1952 SHA256 5cbd61cf5ecee00debfdeba70ae080595a4a8865842fe78ea630e08de4d8dfc8 SHA512 e381a44c375b9333818a1d81003e1b72c685d944faabe3e7dca9f546d592747ba3eedecc5afb02b0dabdf233acd2a4440de3b71b3d5bf948f0a6ce5967fbe0a4 WHIRLPOOL 5ae207fd88eed9dbf9df5a82ac0c1612e9c7f32b69032be1e7ca2555353c724dab0635969ce683f57cb730d5c55125fd94d6452090bfbaad8f93d42d37d74b0c
+MISC ChangeLog 7036 SHA256 93f27fe361da5af9ad1ff8a8bcaadb41c1c77241683c1920ea5ad5fddb8940d6 SHA512 de8f032dcb64c831f24b354c8e2e2671e4d8159231b23e0b845a4027ea6caf25da163c016f7849195aadd445629d1fc5e0719d04dfee330a6ffb006e119d1889 WHIRLPOOL e89d61296d302f882fc34b3c38384739649d44296c4418a3035cd94373ffe6bf564e7eb8f7ce8cf7c2592482b78c4e58c512923b9489cba0d70a6f1cdd4a3ec7
 MISC metadata.xml 531 SHA256 b64899c713fad5c0273467093ff918dd51788672ceb00f20cd4dced3be04bd54 SHA512 c66faa81075bb1fbaf619f95db0b8f12a889d649f008e4dffee8fffa1c86b9c31ab2f9148904e4c2fdaee30d43672e4f2999b4a281e62860bef5fd4972aade68 WHIRLPOOL 3b289dd750abe92894b422d8468280e6885421ae1c86e8caf82d3911738e569263eaad5c628107933d9d3331cfd4f7af4f84198e964f15a75c2a45438335b5ea
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJVD6X3XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ1RTNCRkUzRDRBNkI2MEEwQkYwQzMyOEEx
-OEU1QjZGMkQ4RDVFQzhEAAoJEBjltvLY1eyNQqsQALDNfRX4RcwBRbK4OuI6cI3O
-BEB0XlrGTOwHwPFR5/UeSSB2A30bdU5fgbzGAZusubWk4upBOU/5k7iuGa6SnbdX
-JPEO8WJhY6CQSH2XSEPJCdwN0UdsO2K8qIQQR5Wa4cYZ8CkDvZUfm+4h74X7Va5B
-P5t1e8X+Ne8ekX6kaZjRXY2PZ9h7EgDPUG5OTwXH/9ng6sDhXpSLHedf0UKk52hm
-OlgcBLfbT/4u5kMDM5kbL/G36WseTFxhUYgBr3xmE47T2yzjRdC0oybzEo/fO6yG
-7B7eK84QnXDnFe0J9fupXIvu58smn84xrOcnDBLM7cbqBVjpG7ImYpMr8k5lFZwS
-ezytQ+hzrdhTr/JAXSDxLgYMclZKxmB3C5bQZhxll5CDTUz/WyTRcVtjSEL1v9uK
-DimStG4RjqtjleafUl8aZzlBb2TRaB76D3gvqqO4WKDsFZWjnf9dDH27782fo6bq
-0XXS156JF7giujDmLouTeZqA023YnYQH1kHNV3eRTBgqvMqccw/kQCkco1fwV6xw
-pwAb/Np6Blj+RhtY3xu+QRrIYrHNNhUD8FHW1iwNfKi/JHqOk4OW7OuHIY87L0+6
-rZV7ZwDkK16C6+Nlwb8WdYBb7aF17T30MW9Md2+aj+0lN5wg27FIfVHxunC97ui/
-r843CSmH2LpEkfUrGC2A
-=wbcU
+iQJ8BAEBCABmBQJVMozuXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOkjUQAMX4g8pzrqZqaXR30QbAVkp2
+YsqiBXx6tdbToIpkDNnALGktsRs7+LyjWOuy6x3vG9fKoCphv2/7bE2GNork6Hjq
+npNkimB71l+Tb6KPP5cf45sZt1uG8ZBkeAbJvw/59awDuf1Cst2swoMEM23shKke
+G4U6D0ZPm6cx6QvgvsUgrQoe0RxXUiMnKGN0og2y0uiKfanGje8slEuzCCWiFxId
+JWw9g2i+MvtHrqGOIEKlDi3/iUxyqFMBgz31lsrEbDTCxh6mEs17H39f3PZp4hd6
+XBxR+07slxFRuFiXE1pJeV3aTraTpBN3tJgxO5CNcJ7iYtQuyQlbZSSAQNw+2S9b
+tr0pYyT/NTEUTanTZu+eHaGklrcjwzvaAbJ5DwYqssNxWIOwwfbIceQy3KrX8dYX
+agkpVmBJFtBLsALld0wR97OUEG1iPBl6fyoWRtKNbwL8P54RimhECQpa/O/LSPxa
+Ou7EQzBhYsw+ILJ2wYBcbxNeM1MaL49bxOiRUTGj1Ed/NfdQUDl58/uzosDxGLDh
+QafEHXXGAfDt0E08Fp1E2YMkGW32Vlf2w1MEoWrDmT2qazuRbrOVCpJVVnMdqFJc
+aOFGM/TyePk/LgLorSdybMS2NmZAiAM1NNY3IjPSB69855iKv4/qKCr8WIX1vBT5
+mcdatPJ7FPcPZVB0ph6/
+=UAGF
 -----END PGP SIGNATURE-----
